This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
1/4/22: Added a high-defocus image shift calibration, which improves many
operations when working with defocused View and Search images.

1/4/22: Improved positions for coma-vs-IS cal when drawn on defocused View.

12/29/22: Added mechanism for "reusable" files for Navigator acquire so that
many polygons can be fit to montages and consolidated into a subset of files
rather than one per file.

12/29/22: Started storing the Collapse groups state in settings.

12/29/22: Made all 5 range-selecting keys in Navigator work with groups
collapsed.  Allowed easy deletion of multiple maps in a range with Shift D.

12/29/22: Made program able to open MRC files missing some sections at the
end.

12/28/22: Fixed initialization of overlap and byte scaling when reading
montage parameters for new file at item from Navigator file (In 4.0).

12/23/22: Added dialog for autocontouring grid squares and converting selected
ones to polygons.

12/22/22: Fixed SEMCCD getting frames for just aligning with
K2SynchronousSaving set (In 4.0).

12/18/22: Made SetFrameTime and ChangeFrameAndExposure adjust fraction times
for all Falcons when appropriate.

12/18/22: Added ability to take snapshots of images > 512 Mpixel at 1:1 zoom.

12/18/22: Allowed script buttons in Camera/Script Tools to grow if their
spinners are hidden.

12/16/22: Added dialog to run Coma vs. Image Shift calibration; the positions
tested can seen on a View image and distance and rotation of vectors to
positions can be adjusted in dialog.

12/15/22: Fixed Setup on Manage Vacuum/Dewars in Navigator Acquire falling
through to Setup on Hole Finder.

12/15/22: Fixed crash switching basic mode files.
