@@ -698,6 +698,8 @@ MAC_SAME_NAME_NOARG(SaveSettings, 0, 4, SAVESETTINGS)
 MAC_SAME_FUNC_ARG(SetRegularHoleVectors, 4, 4, SetCustomHoleShifts, SETREGULARHOLEVECTORS, DDDDid)
 MAC_SAME_NAME_ARG(CalibrateComaVsIS, 0, 1, CALIBRATECOMAVSIS, di)
 MAC_SAME_NAME_ARG(CalibrateHighFocusIS, 1, 1, CALIBRATEHIGHFOCUSIS, Dd)
+MAC_SAME_NAME_ARG(GetSTEMBrightContrast, 1, 0, GETSTEMBRIGHTCONTRAST, S)
+MAC_SAME_FUNC_ARG(SetSTEMBrightContrast, 3, 0, GetSTEMBrightContrast, SETSTEMBRIGHTCONTRAST, DDS)
 
 
 // new Python-only commands need to be added to pythonOnlyCmds in ::CMacroProcessor
